--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -7,6 +7,7 @@ html
 		link(href='/vender/bower_componment/bootstrap/dist/css/bootstrap.css',rel='stylesheet',type='text/css')
 		
 	body(ng-app='app')
+		include currentuser
 		block main-content
 		include scripts
 		
