--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -1,7 +1,13 @@
 script(src='vender/bower_componment/jquery/dist/jquery.js',type='text/javascript')
 script(src='vender/bower_componment/angular/angular.js',type='text/javascript')
+script(type="text/javascript", src="vender/bower_componment/bootstrap/dist/js/bootstrap.js")
+
 script(src='vender/bower_componment/angular-resource/angular-resource.js',type='text/javascript')
 script(src='vender/bower_componment/angular-route/angular-route.js',type='text/javascript')
 script(src='app/app.js',type='text/javascript')
 script(src='app/main/mvMainCtrl.js',type='text/javascript')
 script(src='app/main/mvNavBarLogin.js',type='text/javascript')
+script(src='app/main/myIdentity.js',type='text/javascript')
+
+script(src='app/main/mvAuth.js',type='text/javascript')
+script(src='app/main/mvUser.js',type='text/javascript')
